--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,34 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
+parameters:
+  this_is_true:
+    type: boolean
+    default: false
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+  numbah_one:
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+      - image: cimg/python:3.8-node
+    steps:
+      - run:
+          name: 'home directory'
+          command: |
+            cd ~
+            pwd
+      - this_is_true: true
+      - checkout
+
+  numbah_two:
     steps:
       - checkout
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  version: 2
+  do_this_thing:
     jobs:
-      - say-hello
+      - numbah_one
+      - numbah_two:
+          requires: 
+            - numbah_one
+
