--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ workflows:
 jobs:
   runner-test:
     machine: true
-    resource_class: livmade/this_is_a_test
+    resource_class: livmade/boop
     steps:
       - run: echo "Hi I'm on Runners!"
       - run: echo "What's good?"
