--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
     steps:
       - checkout
       - run: uname
-      - run: sudo ./scale.sh
+      - run: ./scale.sh
 
   runner1:
     machine: true
