--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,9 @@ workflows:
   scaling-macos:
     jobs:
       - scale
- # other-runners-windows:
- #   jobs:
-  #    - windows
+  other-runners-windows:
+    jobs:
+      - windows
 
 jobs:
   scale:
@@ -58,8 +58,8 @@ jobs:
     resource_class: livmade/docker
     steps:
       - run: echo "Hi I'm runner job six on Docker! We are finished."
-#  windows:
-#    machine: true
-#    resource_class: livmade/windows
-#    steps:
-#      - run: echo "And, lastly! I am Runner on an Azure-Hosted Windows Server VM! We all work!"
+  windows:
+    machine: true
+    resource_class: livmade/windows
+    steps:
+      - run: echo "And, lastly! I am Runner on an Azure-Hosted Windows Server VM! We all work!"
